--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "npm run build",
-    "build": "webpack -d & copy \"src/index.html\" \"dist/index.html\" /Y & webpack-dev-server --content-base src/ --inline --watch",
+    "build": "webpack -d & copy \"src/index.html\" \"dist/index.html\" /Y & webpack-dev-server --content-base src/ --inline --watch --history-api-fallback",
     "build:prod": "webpack -p & copy \"src/index.html\" \"dist/index.html\" /Y"
   },
   "author": "madhuri",
   "license": "ISC",
   "dependencies": {
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-router": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
